other/restrict-ingress-host/.chainsaw-test/chainsaw-test.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/kyverno/chainsaw/main/.schemas/json/test-chainsaw-v1alpha1.json
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  creationTimestamp: null
  name: restrict-ingress-host
spec:
  steps:
  - name: step-01
    try:
    - apply:
        file: ingress.yaml
    - script:
        content: |
          sed 's/validationFailureAction: audit/validationFailureAction: Enforce/' ../restrict-ingress-host.yaml | kubectl create -f -
    - assert:
        file: chainsaw-step-01-assert-1.yaml
  - name: step-02
    try:
    - apply:
        file: ingress-good.yaml
    - apply:
        expect:
        - check:
            ($error != null): true
        file: ingress-bad.yaml
    - apply:
        expect:
        - check:
            ($error != null): true
        file: ingress-updates-bad.yaml
    - apply:
        file: ingress-updates-good.yaml
  - name: step-99
    try:
    - delete:
        ref:
          apiVersion: kyverno.io/v1
          kind: ClusterPolicy
          name: unique-ingress-host
